blocks/advanced-columns/editor.scss
.wp-block-themeisle-blocks-advanced-columns {

	.wp-themeisle-block-overlay {
		position: absolute;
		width: 100%;
		height: 100%;
		top: 0;
		left: 0;
	}

	&.has-default-gap {
		.wp-block-themeisle-blocks-advanced-column {
			margin: 10px;
		}
	}

	&.has-nogap-gap {
		.wp-block-themeisle-blocks-advanced-column {
			margin: 0;
		}
	}

	&.has-narrow-gap {
		.wp-block-themeisle-blocks-advanced-column {
			margin: 5px;
		}
	}

	&.has-extended-gap {
		.wp-block-themeisle-blocks-advanced-column {
			margin: 15px;
		}
	}

	&.has-wide-gap {
		.wp-block-themeisle-blocks-advanced-column {
			margin: 20px;
		}
	}

	&.has-wider-gap {
		.wp-block-themeisle-blocks-advanced-column {
			margin: 30px;
		}
	}

	.components-resizable-box__container {

		.block-space-size {
			opacity: 0;
			background: rgba(61,191,232,.15);
			display: flex;
			justify-content: center;
			align-items: center;
			height: 100%;
			transition: all ease-in 0.2s;

			span {
				color: #2ea9d0;
			}
		}

		&:hover {
			.block-space-size {
				opacity: 1;
			}
		}
	}
	
	
	&.has-vertical-flex-start {
		> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout > [data-type="themeisle-blocks/advanced-column"] {
			align-self: flex-start;
		}
	}

	&.has-vertical-center {
		> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout > [data-type="themeisle-blocks/advanced-column"] {
			align-self: center;
		}
	}

	&.has-vertical-flex-end {
		> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout > [data-type="themeisle-blocks/advanced-column"] {
			align-self: flex-end;
		}
	}

	.components-resizable-box__container {
		.components-resizable-box__handle {
			position: relative;
			display: block;
			width: 100%;
			height: 100%;
			top: 0;
			left: 0;
			z-index: 9;

			&:before {
				display: none;
			}
		}
	}
}

@media ( min-width: 960px ) {
	.wp-block-themeisle-blocks-advanced-columns {
		display: flex;
		flex-direction: column;
		position: relative;
	
		> .innerblocks-wrap {
			flex-basis: 100%;
			width: 100%;

			> .editor-inner-blocks > .editor-block-list__layout {
				display: flex;
				flex-basis: 100%;

				.editor-block-list__block {
					max-width: unset;
				}
		
				> [data-type="themeisle-blocks/advanced-column"] {
					display: flex;
					flex-direction: column;
					flex: 1;
					width: 0;
		
					.editor-block-list__block-edit {
						margin-top: 12px;
						flex-basis: 100%;
					}
				}
			}
		}

		&.has-2-columns {
	
			&.has-desktop-oneTwo-layout {
	
				> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout > [data-type="themeisle-blocks/advanced-column"] {
	
					&:last-child {
						flex: 2;
					}
				}
			}
	
			&.has-desktop-twoOne-layout {
	
				> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout > [data-type="themeisle-blocks/advanced-column"] {
		
					&:first-child {
						flex: 2;
					}
				}
			}
		}
	
		&.has-3-columns {
	
			&.has-desktop-oneOneTwo-layout {
	
				> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout > [data-type="themeisle-blocks/advanced-column"] {
		
					&:last-child {
						flex: 2;
					}
				}
			}
	
			&.has-desktop-twoOneOne-layout {
	
				> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout > [data-type="themeisle-blocks/advanced-column"] {
		
					&:first-child {
						flex: 2;
					}
				}
			}
	
			&.has-desktop-oneTwoOne-layout {
	
				> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout > [data-type="themeisle-blocks/advanced-column"] {
					flex: 2;
		
					&:first-child {
						flex: 1;
					}
	
					&:last-child {
						flex: 1;
					}
				}
			}
	
			&.has-desktop-oneThreeOne-layout {
	
				> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout > [data-type="themeisle-blocks/advanced-column"] {
					flex: 3;
		
					&:first-child {
						flex: 1;
					}
	
					&:last-child {
						flex: 1;
					}
				}
			}
		}
	}
}
/* ... */

